<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.tarrotsystem.codepreneur.reachable.LandingActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/phnumber_tv"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/mobile_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@color/colorLightGrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.495" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="222dp"
        android:layout_height="134dp"
        app:srcCompat="@drawable/phone_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/resendOtp"
        android:layout_width="98dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/resend_text"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintEnd_toEndOf="@+id/otp_view" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/digit_text"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginBottom="80dp"
        app:layout_constraintEnd_toEndOf="@+id/otp_view"
        app:layout_constraintStart_toStartOf="@+id/otp_view"
        app:layout_constraintBottom_toBottomOf="@+id/otp_view"
        app:layout_constraintHorizontal_bias="0.503" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="193dp"
        android:layout_height="40dp"
        android:text="@string/didnotrecieve"
        android:textColor="@color/colorLightGrey"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/otp_view"
        app:layout_constraintStart_toStartOf="@+id/otp_view" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="288dp"
        android:layout_height="46dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:gravity="center"
        android:text="@string/waiting_text"
        android:textColor="@color/colorLightGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/phnumber_tv"
        app:layout_constraintVertical_bias="0.243" />

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="390dp"
        android:layout_height="65dp"
        android:background="@color/colorDarkGrey"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteY="502dp"
        android:layout_marginRight="8dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center|center_vertical" />
        <ImageView
            android:id="@+id/verify"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_action_verify"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/broadcast_elapsetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:paddingLeft="2dp"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="12 SECONDS" />
    </LinearLayout>

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/colorDarkGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="172dp">
    </com.mukesh.OtpView>

    <ImageButton
        android:id="@+id/editPhoneNumber"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/white"
        app:srcCompat="@drawable/ic_action_edit"
        app:layout_constraintTop_toTopOf="@+id/phnumber_tv"
        app:layout_constraintBottom_toBottomOf="@+id/phnumber_tv"
        app:layout_constraintStart_toEndOf="@+id/phnumber_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
