<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    tools:context="com.tarrotsystem.codepreneur.reachable.LandingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="222dp"
        android:layout_height="134dp"
        app:srcCompat="@drawable/phone_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_text"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/mobile"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/phnumberview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phnumberview"
        app:layout_constraintBottom_toTopOf="@+id/phnumberview"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.879" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getstarted_text"
        android:textColor="@color/colorLightGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="4dp" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:ccpDialog_showPhoneCode="true"
        app:ccp_showNameCode="false"
        app:ccp_showPhoneCode="false"
        app:layout_constraintBottom_toBottomOf="@+id/phnumberview"
        app:layout_constraintEnd_toStartOf="@+id/phnumberview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@+id/phnumberview"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/phnumberview"
        android:layout_width="208dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/proceed_btn"
        app:layout_constraintDimensionRatio="w,17:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ccp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.412"
        android:orientation="horizontal"
        android:background="@drawable/et_bottom_line">

        <EditText
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:enabled="false"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:text="234 - "
            android:background="@null"
            android:paddingBottom="5dp" />
        <EditText
            android:id="@+id/phnumber_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="8"
            android:inputType="number"
            android:maxLength="14"
            android:textSize="20sp"
            tools:text="8174847684"
            android:background="@null"
            android:paddingBottom="5dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="402dp"
        android:layout_height="62dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:id="@+id/proceed_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/proceed_text"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
